<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_info"
        android:title="@string/about_bot"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_theme"
        android:title="@string/change_theme"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_rate"
        android:title="@string/rate_this_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share_this_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete"
        
        android:title="@string/delete_chat"
        app:showAsAction="never" />
</menu>